Fixing top alignment of the main content and rightrail. Making the application of the page gutter less convoluted.

--- a/_scss/component/nav.scss
+++ b/_scss/component/nav.scss
@@ -30,11 +30,7 @@
   &__brand {
     @include span-columns(2 of 4);
     width: 60%;
-    padding-left: $size-default;
-
-    @include media($SM) {
-      padding-left: $size-M;
-    }
+    padding-left: $size-M;
 
     @include media($ML) {
       width: 100%;
