--- a/_scss/layouts/app-guide.scss
+++ b/_scss/layouts/app-guide.scss
@@ -13,7 +13,12 @@
   &__body {
     @include outer-container();
     max-width: $site-max-width;
+    margin-top: $size-L;
     background-color: $color-gray-lightest;
+
+    h1 {
+      margin-top: 0;
+    }
   }
 
   .usajobs-panel-box {
